--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -81,31 +81,31 @@
       <!-- uProxy contacts offering access to or requesting access from user -->
       <uproxy-roster-group
           groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Offers" : "Requests"}}'
-          onlineContacts='{{ onlinePending }}'
-          offlineContacts='{{ offlinePending }}'
+          onlineContacts='{{ contacts.onlinePending }}'
+          offlineContacts='{{ contacts.offlinePending }}'
           searchQuery='{{ searchQuery }}'
           pending="{{ true }}"></uproxy-roster-group>
 
       <!-- Hide HR above Trusted if there are no Trusted contacts, or if there are no Pending contacts -->
       <hr color="#eee"
-          hidden?='{{ ((onlinePending.length == 0 && offlinePending.length == 0)) || (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) }}'></hr>
+          hidden?='{{ ((contacts.onlinePending.length == 0 && contacts.offlinePending.length == 0)) || (contacts.onlineTrustedUproxy.length == 0 && contacts.offlineTrustedUproxy.length == 0) }}'></hr>
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
           groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you trust" : "Friends who can get access from you"}}'
-          onlineContacts='{{ onlineTrustedUproxyContacts }}'
-          offlineContacts='{{ offlineTrustedUproxyContacts }}'
+          onlineContacts='{{ contacts.onlineTrustedUproxy }}'
+          offlineContacts='{{ contacts.offlineTrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
 
       <!-- Hide HR above Untrusted if there are no Untrusted contacts, or if there are no Trusted & Pending contacts -->
       <hr color="#eee"
-          hidden?='{{ (onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) || ((onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) && (onlinePending.length == 0 && offlinePending.length == 0)) }}'></hr>
+          hidden?='{{ (contacts.onlineUntrustedUproxy.length == 0 && contacts.offlineUntrustedUproxy.length == 0) || ((contacts.onlineTrustedUproxy.length == 0 && contacts.offlineTrustedUproxy.length == 0) && (contacts.onlinePending.length == 0 && contacts.offlinePending.length == 0)) }}'></hr>
 
       <!-- untrusted uProxy contacts -->
       <uproxy-roster-group
           groupTitle='Other friends running uProxy'
-          onlineContacts='{{ onlineUntrustedUproxyContacts }}'
-          offlineContacts='{{ offlineUntrustedUproxyContacts }}'
+          onlineContacts='{{ contacts.onlineUntrustedUproxy }}'
+          offlineContacts='{{ contacts.offlineUntrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
     </div>
 
