--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -92,7 +92,7 @@
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you trust" : "Friends who can get access from you"}}'
+          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
           onlineContacts='{{ contacts.onlineTrustedUproxy }}'
           offlineContacts='{{ contacts.offlineTrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
