Use Quicksand font for uProxy splash page

--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -16,6 +16,15 @@
     @font-face {
       font-family: Roboto, sans-serif;
     }
+    @font-face {
+      font-family: Quicksand;
+      src: url(fonts/Quicksand-Regular.ttf);
+    }
+    @font-face {
+      font-family: Quicksand;
+      src: url(fonts/Quicksand-Bold.ttf);
+      font-weight: 700;
+    }
     html {
       height: 100%;
       position: relative;
