--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -22,6 +22,16 @@
       color: #009688;  /* dark green */
       margin-bottom: 1.5em;
     }
+    h1.uproxyTitle {
+      font-family: "Quicksand", sans-serif;
+      font-weight: 700;
+      font-size: 40px;
+      letter-spacing: -1px;
+      margin-bottom: 1em;
+    }
+    h1.uproxyTitle .first-u {
+      color: #10c9b1;
+    }
     h1.sub {
       font-weight: normal;
     }
@@ -91,7 +101,7 @@
     <div vertical layout id='intro1' hidden?='{{SPLASH_STATES.INTRO!==ui.splashState}}'>
       <div class='view' flex>
         <img class='uproxy-logo' src='../icons/smiley.png'>
-        <h1>uProxy</h1>
+        <h1 class='uproxyTitle'><span class='first-u'>u</span>Proxy</h1>
         <p>
           uProxy helps you share your access to the internet or get internet
           access from friends
