--- a/src/generic_ui/polymer/troubleshoot.html
+++ b/src/generic_ui/polymer/troubleshoot.html
@@ -6,7 +6,7 @@
 <link rel='import' href='../lib/core-signals/core-signals.html'>
 <link rel='import' href='faq-link.html'>
 
-<polymer-element name='uproxy-troubleshoot'>
+<polymer-element name='uproxy-troubleshoot' attributes='titleText'>
   <template>
     <style>
     :host {
@@ -51,8 +51,29 @@
       min-width: 305px;
       z-index: 1002; /* Must be greater than core-overlay-backdrop */
     }
-    paper-action-dialog::shadow #scroller {
-      padding: 18px 20px 0px 20px;
+    paper-dialog::shadow #scroller {
+      padding: 12px;
+    }
+    #askToAnalyze, #analyzeNetwork, #analyzedNetwork {
+      padding: 0px 15px 15px;
+      color: rgba(0,0,0,0.55);
+    }
+    #analyzeNetwork {
+      text-align: center;
+      font-size: 14px;
+    }
+    #analyzedNetwork {
+      text-align: left;
+    }
+    #analyzedNetworkButtons {
+      text-align: center;
+    }
+    paper-progress::shadow #activeProgress {
+      background-color: #009688;
+    }
+    uproxy-faq-link /deep/ #linkText {
+      text-decoration: underline;
+      color: rgba(0,0,0,0.40);
     }
     </style>
 
@@ -61,23 +82,46 @@
 
     <paper-dialog backdrop layered='false' id='troubleshootDialog'>
       <core-icon class="button" icon="clear" on-tap='{{ close }}'></core-icon>
-      <h1>Unable to proxy</h1>
-      <div>
+      <h1>{{ titleText }}</h1>
+      <div id='askToAnalyze' hidden?='{{ analyzingNetwork || analyzedNetwork }}'>
         <p>
-          Something went wrong. Would you like uProxy to diagnose your network?
+          It could be that your network's NAT type is incompatible with uProxy. Would you like to uProxy to analyze your network?
           <uproxy-faq-link anchor='doesUproxyLogData'>
             <core-icon icon="help"></core-icon>
           </uproxy-faq-link><br>
         </p>
-        <paper-button on-tap='{{ analyzeNetworkAndViewLogs }}'>
-          Analyze Network
-        </paper-button><br>
-        <paper-button on-tap='{{ submitFeedback }}'>
-          Submit Feedback
+        <paper-button on-tap='{{ getNatType }}'>
+          Yes
+        </paper-button>
+        <paper-button on-tap='{{ close }}'>
+          No
         </paper-button>
       </div>
+
+      <div id='analyzeNetwork' hidden?='{{ !analyzingNetwork }}'>
+        Analyzing network<br>
+        <paper-progress indeterminate='true'></paper-progress>
+      </div>
+      <div id='analyzedNetwork' hidden?='{{ !analyzedNetwork }}'>
+        It looks like you are on a <b>{{ natType }}</b>, which is <b>{{ natDescription }}</b> interfering with your ability to connect to friends.
+        <uproxy-faq-link anchor='doesUproxyLogData'>More info</uproxy-faq-link><br><br>
+          <!-- <core-icon icon="help"></core-icon> -->
+        Would you like to submit your NAT type to the uProxy team, to help us better understand the networks our users are on?
+        <uproxy-faq-link anchor='doesUproxyLogData'>Privacy policy</uproxy-faq-link>
+        <br>
+        <div id='analyzedNetworkButtons'>
+          <paper-button on-tap='{{ submitFeedback }}'>
+            Yes
+          </paper-button>
+          <paper-button on-tap='{{ close }}'>
+            No
+          </paper-button>
+        </div>
+      </div>
+
     </paper-dialog>
 
   </template>
   <script src='troubleshoot.js'></script>
 </polymer-element>
+
