--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -147,7 +147,7 @@
         padding: 16px 16px 12px 20px;
         font-size: 12px;
       }
-      .toastHelpLink {
+      #toastHelpLink {
         color: #47B5AA;
       }
       core-icon[icon="launch"] {
@@ -276,10 +276,9 @@
         opened='{{ messageNotNull(ui.toastMessage) }}'
         text='{{ ui.toastMessage }}' responsiveWidth='320px'
         style='bottom: {{ topOfStatuses(ui.gettingStatus, ui.sharingStatus) }}px;'>
-      <div class='toastHelpLink' on-tap="{{ troubleshootForGetter }}"
-          hidden?='{{ !messageMatchesFailure(ui.toastMessage, UI.GET_FAILED_MSG) }}'>GET HELP</div>
-      <div class='toastHelpLink' on-tap="{{ troubleshootForSharer }}"
-          hidden?='{{ !messageMatchesFailure(ui.toastMessage, UI.SHARE_FAILED_MSG) }}'>GET HELP</div>
+      <div id='toastHelpLink' on-tap="{{ openTroubleshoot }}"
+          hidden?='{{ !messageMatchesFailure(ui.toastMessage, UI.GET_FAILED_MSG) && !messageMatchesFailure(ui.toastMessage, UI.SHARE_FAILED_MSG) }}'>GET HELP
+      </div>
     </paper-toast>
 
   </template>
