Feedback title size.

--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -17,6 +17,9 @@
       text-align: center;
       font-color: #009688;  /* dark green */
     }
+    uproxy-app-bar {
+      font-size: 18px;
+    }
     #feedbackPanel {
       height: 100%;
       width: 100%;
