--- a/src/generic_ui/polymer/link.html
+++ b/src/generic_ui/polymer/link.html
@@ -16,7 +16,7 @@ Usage: <uproxy-link role='(button|link)' on-tap='{{ EVENT }}'>CONTENT</uproxy-li
       }
     </style>
 
-    <span tabindex='0' id='linkText'>
+    <span tabindex='0'>
       <content></content>
     </span>
 
