--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -6,8 +6,7 @@
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
   <script src='lib/webcomponentsjs/webcomponents.min.js'></script>
 
-  <script src='scripts/dependencies.js'></script>
-  <script src='scripts/uproxy.js'></script>
+  <script src='scripts/context.static.js'></script>
 
   <link rel='import' href='polymer/vulcanized.html'>
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
