Factor whether statuses are visible into height calculation
If the statuses at the bottom of the screen are not visible at some
point, we should factor that into the calculation of how tall they are.
In order to do that, we now accept a boolean value into topOfStatuses
that denotes whether or not they can be seen.  If this value is false,
we just use the padding value for the height of the statuses.

In order to check whether they are visible, we also need to figure out
whether or not the feedback window is open (they cannot be seen if it is
open).  To do this, we have it export the attribute opened which is
calculated based off of whether its internal panel is open.

Fixes #1334

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -201,7 +201,7 @@
     <uproxy-copypaste id='copypaste' hidden?='{{ ui_constants.View.COPYPASTE !== ui.view }}'>
     </uproxy-copypaste>
 
-    <uproxy-feedback></uproxy-feedback>
+    <uproxy-feedback id='feedback'></uproxy-feedback>
 
     <uproxy-splash id='splash' hidden?='{{ui_constants.View.SPLASH!=ui.view}}'>
     </uproxy-splash>
@@ -354,7 +354,7 @@
 
     <paper-toast id='toast'
         text='{{ toastMessage }}' responsiveWidth='320px'
-        style='bottom: {{ topOfStatuses(ui.gettingStatus, ui.sharingStatus) }}px;'
+        style='bottom: {{ topOfStatuses([ui.gettingStatus, ui.sharingStatus], ui.view == ui_constants.View.ROSTER && !$.feedback.opened) }}px;'
         duration='10000'>
       <div id='toastHelpLink' on-tap="{{ openTroubleshoot }}"
           hidden?='{{ !stringMatches(toastMessage, user_interface.GET_FAILED_MSG) && !stringMatches(toastMessage, user_interface.SHARE_FAILED_MSG) }}'>GET HELP
